--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "angular-animations": "^0.11.0",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
