--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "angular-animations": "^0.11.0",
+    "angular-disable-browser-back-button": "^1.0.2",
     "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "ngx-toastr": "^17.0.2",
